--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "*- это учебный проект по основам JavaScript на курсе \"веб-разработчик\" в Яндекс.Практикуме. Процесс выполнения данной работы состоит из нескольких двухнедельных спринтов (**4-6 спринты**), поэтому с каждым спринтом код меняется и дополняется*",
   "main": "index.js",
   "scripts": {
-    "build": "webpack" ,
-    "dev": "webpack serve"
+    "build": "webpack",
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "cssnano": "^5.1.14",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
@@ -33,6 +36,12 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "core-js": "^3.27.2"
-  }
+    "core-js": "^3.27.2",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
+    "os": "^0.1.2",
+    "path": "^0.12.7"
+  },
+  "__comment1__":"Я попытался скрыть api_key с помощью dotenv, хотя этого и нет в задании, но чтото пошло не так.."
 }
+
